--- a/.gitLab-ci.yml
+++ b/.gitLab-ci.yml
@@ -3,6 +3,11 @@ stages:
    - run
    - deploy
 
+image: docker:latest
+
+services:
+- docker:dind
+
 variables:
     MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
     MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
